Attempt to match comp

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Will Andy Pick Me?</title>
   </head>
   <body>
-
+    <nav class="top-title-banner">Will Andy Pick Me?
+    </nav>
+    <section class="box-for-images-box">
+      <form class="box-for-eight-ball">
+        <img class="eight-ball hidden" src="assets/eight-ball.png" alt="a magic eightball that will disappear and be replaced by a random message from it">
+        </img>
+        <label class="prompt">Type Your Question Here!</lable>
+        <input type="text" id="input-field"></input>
+        <button class="get-answer hidden">Get Your Answer</button>
+        <button class="clear hidden">Clear</button>
+      </form>
+      <h3 class="text hidden" id="randomEightballAnswer">Inject Random Here</h3>  
+      <div class="box-for-woody">
+        <img class="woody" src="assets/woody.png" alt="image of woody from toy story with a face full of pixar anticipation for the answer to his question">
+        </img>
+      </div>
+    </section>
   </body>
+  <script type="text/javascript" src="index.js">
+  </script>
 </html>
